Made IE6 select-free fix conditional and only appears when on IE6 browser

--- a/Zone/Core/core.css
+++ b/Zone/Core/core.css
@@ -58,12 +58,12 @@ A.headtitle:link,A.headtitle:visited {
 A.headtitle:hover {
   color: [CORE_TEXTBGCOLOR];
   background-color: [CORE_FGCOLOR];
-  background-image: [CORE_FGIMG];
+[IFNOT ISIE6]  background-image: [CORE_FGIMG];[ENDIF ISIE6]
 }
 
 TR.headcell  {
   background-color: [CORE_FGCOLOR];
-  background-image: [CORE_FGIMG];
+[IFNOT ISIE6]  background-image: [CORE_FGIMG];[ENDIF ISIE6]
   
   border: none;
 }
@@ -160,25 +160,25 @@ IMG.click:hover {
 .CORETblHead {
   color: [CORE_TEXTBGCOLOR];
   background-color: [CORE_FGCOLOR];
-  background-image: [CORE_FGIMG];
+[IFNOT ISIE6]  background-image: [CORE_FGIMG];[ENDIF ISIE6]
 }
 
 .CORETblHeadBold {
   color: [CORE_TEXTBGCOLOR];
   background-color: [CORE_FGCOLOR];
-  background-image: [CORE_FGIMG];
+[IFNOT ISIE6]  background-image: [CORE_FGIMG];[ENDIF ISIE6]
   font-weight: bold;
 }
 .CORETblHeadCell {
   background-color: [CORE_FGCOLOR];
-  background-image: [CORE_FGIMG];
+[IFNOT ISIE6]  background-image: [CORE_FGIMG];[ENDIF ISIE6]
 }
 .CORETblHeadCell TD{
   color: [CORE_TEXTBGCOLOR];
 }
 .CORETblHeadCellLine {
   background-color: [CORE_FGCOLOR];
-  background-image: [CORE_FGIMG];
+[IFNOT ISIE6]  background-image: [CORE_FGIMG];[ENDIF ISIE6]
   border-style : solid none none none;
   border-width : 1px;
   border-color : [CORE_BGCELLCOLOR];
